--- a/Amit.ipynb
+++ b/Amit.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP5mktu3kdNmmAhf6Rj4YXr",
+      "authorship_tag": "ABX9TyOSSj7NZzV8sIe/EV19UUQU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,12 +54,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
-        "id": "Q3imEMxTwrQG"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Q3imEMxTwrQG",
+        "outputId": "7f99a0f9-9a7f-450d-cd97-d04ecab362fb"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "this is my git project\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"this is my git project\")"
+      ]
     }
   ]
 }
