--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMqpFq+tC/DS7cTKTtwdYc2",
+      "authorship_tag": "ABX9TyO7RDfyee5Xf31pJ4qPe4C2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,6 +49,51 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Multiple Line Statement"
+      ],
+      "metadata": {
+        "id": "6LIVyPJktdy-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b=1+2+3\\\n",
+        "+5\\\n",
+        "+7+8+\\\n",
+        "6+11\n",
+        "print(b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "heUcd2vntier",
+        "outputId": "0aea4b9b-a6d2-4e1c-c810-aa438cea60d7"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "43\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "t6F5hXvsuP1H"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
