--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO7RDfyee5Xf31pJ4qPe4C2",
+      "authorship_tag": "ABX9TyP196BvycBeG27zOSPOATRC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,17 +29,63 @@
     {
       "cell_type": "code",
       "source": [
+        "#Single Line statement\n",
         "a=10\n",
-        "print(a)"
+        "print(a)\n",
+        "#Multiple Line statement\n",
+        "\n",
+        "b=1+2+3\\\n",
+        "+5\\\n",
+        "+7+8+\\\n",
+        "6+11\n",
+        "print(b)\n",
+        "\n",
+        "#for parenthesis()\n",
+        "#{}, [] no explicit\n",
+        "#line continution is necessery\n",
+        "c=(1+2+3\n",
+        "   +4+5)\n",
+        "print(c)\n",
+        "#space seperated\n",
+        "print(a,b,c)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "QDXj8l3-tCqp",
-        "outputId": "b472b2a7-2729-4b63-b0a6-26a646811658"
+        "outputId": "56aa4bfb-1786-4830-e408-66c42357227e"
       },
-      "execution_count": 1,
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "43\n",
+            "15\n",
+            "10 43 15\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#In python, we don't have explicityly define the variable types\n",
+        "#Assigning\n",
+        "var1=10\n",
+        "print(var1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qDY_7safvhBn",
+        "outputId": "dc47b440-21da-4b98-f8b5-6fff4c614818"
+      },
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -49,51 +95,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Multiple Line Statement"
-      ],
-      "metadata": {
-        "id": "6LIVyPJktdy-"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "b=1+2+3\\\n",
-        "+5\\\n",
-        "+7+8+\\\n",
-        "6+11\n",
-        "print(b)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "heUcd2vntier",
-        "outputId": "0aea4b9b-a6d2-4e1c-c810-aa438cea60d7"
-      },
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "43\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "t6F5hXvsuP1H"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
