--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP7hGPwGRfowX1K52YIrzI1",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMOvGVJX6B+vH3hYUxwc+Xi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -307,6 +308,231 @@
             "None\n",
             "None\n",
             "100\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Everything is an object in python programming\n",
+        "#data types are actually classes and values are instances of the classes\n",
+        "num1=99\n",
+        "#this num1 referes to the object (containing / refering 10)\n",
+        "print(type(num1))\n",
+        "float1=3.1416\n",
+        "print(type(float1))\n",
+        "comp1=3+4j\n",
+        "print(type(comp1))\n",
+        "str1=\"python is fun\"\n",
+        "print(type(str1))\n",
+        "print(type(True))\n",
+        "print(type(None))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HK6_waR31SZY",
+        "outputId": "e0dfd3ee-d082-4692-dcb3-39df1a8cd716"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'int'>\n",
+            "<class 'float'>\n",
+            "<class 'complex'>\n",
+            "<class 'str'>\n",
+            "<class 'bool'>\n",
+            "<class 'NoneType'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num1=10\n",
+        "print(float(num1))\n",
+        "print(complex(num1))\n",
+        "print(\"{}\".format(num1))\n",
+        "float1=3.1416\n",
+        "print(int(float1))\n",
+        "print(\"{}\".format(float1))\n",
+        "str1=\"10\"\n",
+        "num2=int(str1)\n",
+        "print(num2)\n",
+        "print(type(num2))\n",
+        "print(float(str1))\n",
+        "print(complex(str1))\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cbDcHAfZ26b8",
+        "outputId": "7abc4e3b-2691-41e3-fe63-2989284a14c2"
+      },
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10.0\n",
+            "(10+0j)\n",
+            "10\n",
+            "3\n",
+            "3.1416\n",
+            "10\n",
+            "<class 'int'>\n",
+            "10.0\n",
+            "(10+0j)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Implicit type conversion\n",
+        "num1=10\n",
+        "num2=15.5\n",
+        "print(num1+num2)\n",
+        "#Explicit type conversion\n",
+        "num1=10\n",
+        "str1=\"123\"\n",
+        "#print(num1+num2)#Error\n",
+        "print(num1+int(str1))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SFR6v_fD8gP9",
+        "outputId": "0ec0ab9c-4d28-4d05-b8ee-6b9213839f86"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "25.5\n",
+            "133\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#String ConCat\n",
+        "str1=\"123\"\n",
+        "str2=\"234\"\n",
+        "num1=10\n",
+        "\n",
+        "print(str1+str2)\n",
+        "num2=20\n",
+        "str3=\"{}\".format(num2)\n",
+        "print(str3)\n",
+        "print(type(str3))\n",
+        "print(str1+str2+str3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oxQUOLfq9t_D",
+        "outputId": "a14f835b-d3c2-4bde-e26b-fd335bfbd713"
+      },
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "123234\n",
+            "20\n",
+            "<class 'str'>\n",
+            "12323420\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Python Output\n",
+        "#print(*objects,seperate=' ';end='\\n',......)\n",
+        "print(\"Line1\")\n",
+        "print(\"Line2\")\n",
+        "print(\"Value=\",10)\n",
+        "print(\"Value=\",10,sep='#')\n",
+        "print(\"Portion1=\",10,sep='',end=\"\\t\")\n",
+        "print(\"Portion2\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ahqgvtZRC1SV",
+        "outputId": "fb5bb632-e47f-4944-dccc-dc0f82194f8e"
+      },
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Line1\n",
+            "Line2\n",
+            "Value= 10\n",
+            "Value=#10\n",
+            "Portion1=10\tPortion2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Python Formatted String\n",
+        "var1,var2=10,20\n",
+        "print(var1)\n",
+        "print(var2)\n",
+        "str1=\"value1={} and value2={}\".format(var1,var2)\n",
+        "print(str1)\n",
+        "print(\"Value1={1} and value2={0}\".format(var1,var2))\n",
+        "print(\"Value1={key1} and value2={key2}\".format(key1=var1,key2=var2))\n",
+        "# how many Zer want to print after decimal point\n",
+        "f1=2.56 #08.5f\n",
+        "\n",
+        "print(\"formatted value:{key:03.5f}\".format(key=f1))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AeBzbcfWEmo6",
+        "outputId": "e97e67c9-5836-4e7f-ad4e-524abc2f4165"
+      },
+      "execution_count": 127,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "20\n",
+            "value1=10 and value2=20\n",
+            "Value1=20 and value2=10\n",
+            "Value1=10 and value2=20\n",
+            "formatted value:2.56000\n"
           ]
         }
       ]
